fix: heart icon :hover in dark mode

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,7 @@
   --bg-linear-gradient-color-end: #004306;
   --text-weight-title: 785;
   --text-weight-paragraph: 465;
-  --heart-dark-color: #000;
+  --heart-dark-color: #00CC14;
   --heart-main-color: #FF0000;
 
   .page {
